# BatteryConsumptionSuite

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.c
kernel/: CMakeLists.txt  exports.yml
kernel/src/: main.c
scripts/: build_release.ps1  build_release.sh
suprx/: CMakeLists.txt  main.yml
suprx/src/: main.c
tests/mock/: expected_stats_rows.json  expected_stats_rows.txt  kernel_state.txt  samples.csv  screen.csv  sessions.csv  title_cache.csv  verify_stats.ps1
